fix: Make footer totally visible on mobile while loading

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
 
 html {
     overflow-y: scroll;
+    min-height: 100%;
+    position: relative;
 }
 
 ul {
@@ -77,13 +79,13 @@ nav .container, footer .container {
 
 /* fix footer to bottom */
 nav {
-    margin-bottom: calc(100vh - 158px);
+    /* margin-bottom: calc(100vh - 158px); */
 }
 
 #app-container > section {
-    border: 1px solid transparent;
-    min-height: calc(100vh - 158px);
-    margin-top: calc(158px - 100vh);
+    margin-bottom: 120px;
+    /* min-height: calc(100vh - 158px); */
+    /* margin-top: calc(158px - 100vh); */
 }
 
 
@@ -400,6 +402,13 @@ main li .wrap-in::after {
 /*
  * Footer
 */
+
+footer.wrap-out {
+    position: absolute;
+    bottom: 6px;
+    left: 0;
+    right: 0;
+}
 
 footer .wrap-in {
     border-width: 0;
@@ -1163,13 +1172,13 @@ header.not-found .headline {
 @media screen and (min-width: 351px) {
     /* fix footer to bottom */
     nav {
-        margin-bottom: calc(100vh - 138px);
+        /* margin-bottom: calc(100vh - 138px); */
     }
 
     #app-container > section {
-        border: 1px solid transparent;
-        min-height: calc(100vh - 138px);
-        margin-top: calc(138px - 100vh);
+        margin-bottom: 100px;
+        /* min-height: calc(100vh - 138px); */
+        /* margin-top: calc(138px - 100vh); */
     }
 
     /* 
@@ -1319,13 +1328,13 @@ header.not-found .headline {
 @media screen and (min-width: 700px){
     /* fix footer to bottom */
     nav {
-        margin-bottom: calc(100vh - 98px);
+        /* margin-bottom: calc(100vh - 98px); */
     }
 
     #app-container > section {
-        border: 1px solid transparent;
-        min-height: calc(100vh - 98px);
-        margin-top: calc(98px - 100vh);
+        margin-bottom: 60px;
+        /* min-height: calc(100vh - 98px); */
+        /* margin-top: calc(98px - 100vh); */
     }
 
     /* nav */
